# GPS_coordinate_converter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example.cpp
example/: main.cpp
include/: coordinate_conversor.h
include/ramrod/gps/: coordinate_conversor.h  types.h
include/torero/: coordinate_conversor.h
src/: coordinate_conversor.cpp
src/ramrod/gps/: coordinate_conversor.cpp
